<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!-- Recommended icon color code: #828282 -->
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/site_menu_home"/>

        <item
            android:id="@+id/action_actdeportivas"
            android:icon="@drawable/ic_menu1"
            android:title="@string/site_menu_actDeportivas"/>

        <item
            android:id="@+id/action_categories"
            android:icon="@drawable/ic_category1"
            android:title="@string/site_menu_categories"/>
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook"/>

            <item
                android:id="@+id/action_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter"/>

            <item
                android:id="@+id/action_google_plus"
                android:icon="@drawable/ic_google_plus"
                android:title="@string/google_plus"/>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/action_mis_actividades"
                android:icon="@drawable/ic_terms_conditions"
                android:title="@string/site_menu_mis_actividades"/>
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>
